--- a/src/scss/style1.scss
+++ b/src/scss/style1.scss
@@ -1,5 +1,3 @@
-strong {
-    font-size: large;
 * {
     box-sizing: border-box;
 }
@@ -13,4 +11,94 @@ body {
     width: 100vw;
     margin: 0rem auto;
     border: 0.25rem solid red;
+}
+
+.container-header {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+.nav-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: gray;
+
+}
+
+.nav-link-wrap {
+    min-width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style-type: none;
+	margin: 0;
+    padding: 0;
+
+    a {
+        color: black;
+        text-decoration: none;
+    
+    }
+
+    a:hover {
+        font-weight: bolder;
+      }
+}
+
+
+.nav-logo {
+    width: 10%;
+    height: 10%;
+    margin-bottom: 2%;
+    
+}
+
+.nav-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(48, 51, 48);
+
+}
+
+.nav-link-wrap-footer {
+    display: flex;
+    min-width: 90%;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style-type: none;
+	margin-top: 10%;
+    padding: 0;
+
+    a {
+        color: blue;
+        text-decoration: underline;
+    }
+
+    a:hover {
+        color: black;
+        font-weight: bolder;    
+      }
+}
+
+h3 {
+    text-transform: uppercase;
+}
+
+.h3-div {
+    margin-top: 10%;
+    color: rgb(237, 225, 225);
+}
+.h4-div {
+    margin-bottom: 10%;
+    color: rgb(237, 225, 225);
+
+
+ a {
+    color: blue;
+    text-decoration: underline;
+
+ }
 }
