--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -10,7 +10,10 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 45%;
+        width: 90%;
+        @media (min-width: 550px) {
+            width: 45%;
+        }
         
     }
     &__block {
