--- a/src/scss/style1.scss
+++ b/src/scss/style1.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
 body {
     margin: 0rem;
 }
@@ -18,6 +22,7 @@ body {
         width: 80%;
     }
     margin: 0rem auto;
+    padding: 0rem 1rem;
 }
 
 .container-header {
@@ -114,4 +119,9 @@ h3 {
     width: 100%;
     height: auto;
     margin-top: 1rem;
+}
+
+.big_image_bg {
+    padding: 0 10%;
+    background-image: linear-gradient(0deg, rgb(48, 51, 48) 0%, rgb(48, 51, 48) 20%, white 20%, white 100% );
 }
