--- a/src/scss/coffee.scss
+++ b/src/scss/coffee.scss
@@ -1,20 +1,25 @@
 .div-coffee-item-wrap {
     display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+    justify-content: space-between;
+
 }
 
 
 .pictures {
-    width: 60%;
-	height: 10rem;
+    width: 100%;
+	height: auto;
 	object-fit: cover;
 }
 
 .random {
-    width: 400px;
+    width: 90%;
+    @media (min-width: 550px) {
+        width: 45%;
+    }
     margin: auto;
     padding: 2%;
+    align-items: stretch;
 
 
 }
@@ -36,7 +41,8 @@
 
 .div-text {
     background-color: rgb(136, 133, 133);
-    width: 400px;
+    // width: 400px;
     margin: auto;
     padding: 2%;
+    flex-grow: 1;
 }
